Fixed Delete button being cut off. Image replacement still not working.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -433,6 +433,10 @@ footer p {
   margin-bottom: 10px;
 }
 
+.btn-post {
+  margin-left: 15px;
+}
+
 .profile {
   font-size: 25px;
 }
